CSS/index.css
html {
  font-family: "Nunito Sans", sans-serif !important;
}

.bg-brown {
  background-color: #cf9841 !important;
}

.t-brown {
  color: #cf9841 !important;
}

.navbar-toggler-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28207, 152, 65, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
}

.navbar-toggler {
  border: 0px solid !important;
  padding: 1px !important;
}

.logo {
  position: relative;
  z-index: 1;
}

.navCurve {
  position: absolute;
  background: black;
  height: 100%;
  width: 40px;
  border-radius: 0px 0px 0px 24px;
  transform: scaleX(-1) rotate(-28.5deg) translateX(12px) translateY(-1.7px)
    scale(1.3);
  z-index: 0px;
}

.navCurve::before {
  position: absolute;
  top: 0px;
  content: " ";
  width: 40px;
  background: black;
  height: 25%;
  padding: 5px;
  border-radius: 0px 24px 0px 0px;
  transform: scaleX(1) rotate(5deg) translateX(-15.2px) translateY(-5px);
}

.navCurve::after {
  position: absolute;
  top: 0px;
  content: " ";
  width: 40px;
  background: white;
  height: 50%;
  padding: 5px;
  border-radius: 0px 24px 0px 0px;
  transform: scaleX(1) rotate(5deg) translateX(-40.2px) translateY(-5px);
}

.big-border {
  border: 33px #cf9841 solid;
  visibility: hidden;
}

@media screen and (min-width: 374px) {
  .big-border {
    border: 38px #cf9841 solid;
    visibility: hidden;
  }
}

@media screen and (min-width: 450px) {
  .big-border {
    border: 42px #cf9841 solid;
    visibility: hidden;
  }
}

@media screen and (min-width: 576px) {
}

@media screen and (min-width: 768px) {
  .left-border {
    border-left: 1px solid rgb(150, 143, 143);
  }
  .big-border {
    border: 76px #cf9841 solid;
    visibility: visible;
  }
}

@media screen and (min-width: 992px) {
}

@media screen and (min-width: 1200px) {
}

